small update to docker compose

--- a/server/nido/templates/nido/test.html
+++ b/server/nido/templates/nido/test.html
@@ -15,7 +15,17 @@
 <body>
     <section class="section">
         <div class="container">
-            <button class="button is-primary" id="submitBtn">Purchase!</button>
+            <button class="button is-primary" id="submitBtn">Compremos!</button>
+            <button class="button is-primary" id="submitBtn">Compremos!</button>
+            <button class="button is-primary" id="submitBtn">Compre!</button>
+            <button class="button is-primary" id="submitBtn">Compremos!</button>
+            <button class="button is-primary" id="submitBtn">Compre!</button>
+            <button class="button is-primary" id="submitBtn">Compre!</button>
+            <button class="button is-primary" id="submitBtn">Compremos!</button>
+            
+            <button class="button is-primary" id="submitBtn">Compre!</button>
+            <button class="button is-primary" id="submitBtn">Compre!</button>
+
         </div>
     </section>
 </body>
