--- a/server/nido/templates/nido/test.html
+++ b/server/nido/templates/nido/test.html
@@ -4,29 +4,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Django + Stripe Checkout</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <title>Test 1</title>
     <script src="{% static '/js/pagos.js' %}"></script> 
-    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
-    <script src="https://js.stripe.com/v3/"></script> 
+
 </head>
 
 <body>
-    <section class="section">
-        <div class="container">
-            <button class="button is-primary" id="submitBtn">Compremos!</button>
-            <button class="button is-primary" id="submitBtn">Compremos!</button>
-            <button class="button is-primary" id="submitBtn">Compre!</button>
-            <button class="button is-primary" id="submitBtn">Compremos!</button>
-            <button class="button is-primary" id="submitBtn">Compre!</button>
-            <button class="button is-primary" id="submitBtn">Compre!</button>
-            <button class="button is-primary" id="submitBtn">Compremos!</button>
-            
-            <button class="button is-primary" id="submitBtn">Compre!</button>
-            <button class="button is-primary" id="submitBtn">Compre!</button>
 
-        </div>
     </section>
 </body>
 
