--- a/server/nido/templates/nido/stripe.html
+++ b/server/nido/templates/nido/stripe.html
@@ -7,18 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Stripe test</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <script src="{% static '/js/pagos.js' %}"></script>
+    <!-- <script src="{% static '/js/pagos.js' %}"></script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
     <title>Title</title>
 </head>
 
 <body>
     <main>
-<p>ndhsdnksn</p>
+
+        <p>
+            Content test
+        </p>
         {% block content %}
 
         {% endblock content %}
-<p>njidfnskd</p>
     </main>
 
 </body>
