--- a/server/nido/templates/nido/test2.html
+++ b/server/nido/templates/nido/test2.html
@@ -14,6 +14,9 @@
         <li>Emu</li>
         <li>Emu</li>
         <li>colibri</li>
+        <li>colibri</li>
+        <li>colibri</li>
+        <li>colibri</li>
 
 
     </ul>
