--- a/server/nido/templates/stripe/checkout.html
+++ b/server/nido/templates/stripe/checkout.html
@@ -8,122 +8,70 @@
   <meta name="description" content="A demo of a payment on Stripe" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://js.stripe.com/v3/"></script>
   <script src="{% static '/js/checkout.js' %}"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 
 </head>
 
 <body>
+  <div class="container text-center">
+    <div class="row justify-content-md-center">
+      <h1>Donaciones</h1>
+
+      <div class="row">
+
+        {% for option in options %}
+        <div class="col-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">{{ option.name }}</h5>
+              <p class="card-text">{{ option.description }}</p>
+              <p class="card-text">Costo: ${{ option.amount }}</p>
+              <div class="details" >
+                <p>Detalles del donativo {{ option.name }}:</p>
+                <ul>
+                  <li>{{option.info}}</li>
+                  <li>{{option.aves}}</li>
+                  <li>{{option.entradas}}</li>
+                </ul>
+              </div>
+              <!-- <button class="btn btn-primary show-more" data-option-id="{{ option.pk }}" >Hacer donativo</button> -->
+              <button id="show-form-button" onclick="showForm('value-to-pass')">Show Form</button>
+              <!-- <button class="btn btn-primary show-more" onclick="showForm('{{ option.pk }}')">Hacer donativo</button> -->
+            </div>
+          </div>
+        </div>
+        {% endfor %}
 
 
-  <!--  -->
-  <!-- <h1>Donation Options</h1>
+        <!--  -->
 
-  <div id="options">
-    {% for option in options %}
-      <div class="option">
-        <h2>{{ option.name }}</h2>
-        <p>{{ option.description }}</p>
-        <p>Amount: {{ option.amount }}</p>
-      </div>
-    {% endfor %}
-  </div>
+        <!-- Display a payment form -->
+        <div class="col">
 
-  <script>
-    const options = JSON.parse('{{ options_data|escapejs }}');
-    console.log(options);
-  </script> -->
-  <!--  -->
-
-  <!-- <h1>Donation Options</h1>
-
-  <div id="options">
-    {% for option in options_data %}
-      <div class="option">
-        <h2>{{ option.name }}</h2>
-        <p>{{ option.description }}</p>
-        <p>Amount: {{ option.amount }}</p>
-        <button class="show-more-btn" data-id="{{ option.pk }}">Show more</button>
-        <div class="more-info" id="more-info-{{ option.pk }}" style="display: none;">
-          <p>Payment details: {{ option.payment_details }}</p>
+          <form id="form" style="display: none;">
+          <!-- <form id="payment-form"  style="display: none;"> -->
+            <div id="link-authentication-element">
+              <!--Stripe.js injects the Link Authentication Element-->
+            </div>
+            <div id="payment-element">
+              <!--Stripe.js injects the Payment Element-->
+            </div>
+            <button id="submit">
+              <div class="spinner hidden" id="spinner"></div>
+              <span id="button-text">Pagar ahora</span>
+            </button>
+            <div id="payment-message" class="hidden"></div>
+          </form>
         </div>
       </div>
-    {% endfor %}
-  </div>
-
-  <script>
-    const options = JSON.parse('{{ options_data|escapejs }}');
-    console.log(options) 
-
-    for (const option of options) {
-      console.log(option.fields.name);
-      console.log(option.fields.description);
-      console.log(option.fields.amount);
-    }
-    
-    const showMoreBtns = document.querySelectorAll('.show-more-btn');
-    for (const btn of showMoreBtns) {
-      btn.addEventListener('click', (e) => {
-        const optionId = e.target.dataset.id;
-        const moreInfo = document.querySelector(`#more-info-${optionId}`);
-        moreInfo.style.display = 'block';
-      });
-    }
-  </script> -->
-
-  <!--  -->
-  <h1>Donation Options</h1>
-  {% for option in options %}
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">{{ option.name }}</h5>
-      <p class="card-text">{{ option.description }}</p>
-      <p class="card-text">{{ option.amount }}</p>
-      <div class="details" style="display: none;">
-        <p>Details about {{ option.name }}:</p>
-        <ul>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-        </ul>
-      </div>
-      <button class="btn btn-primary show-more" data-option-id="{{ option.pk }}">Show More</button>
     </div>
-  </div>
-  {% endfor %}
-
-  <script>
-    $(document).ready(function () {
-      $(".show-more").click(function () {
-        console.log("1");
-        console.log($(this).data("option-id"));
-        const optionId = $(this).data("option-id");
-        const details = $(".details[data-option-id='" + optionId + "']");
-        console.log(details);
-        $(this).siblings('.details').toggle();
-      });
-    });
-  </script>
-
-
-
-  <!--  -->
-
-  <!-- Display a payment form -->
-  <form id="payment-form">
-    <div id="link-authentication-element">
-      <!--Stripe.js injects the Link Authentication Element-->
-    </div>
-    <div id="payment-element">
-      <!--Stripe.js injects the Payment Element-->
-    </div>
-    <button id="submit">
-      <div class="spinner hidden" id="spinner"></div>
-      <span id="button-text">Pagar ahora</span>
-    </button>
-    <div id="payment-message" class="hidden"></div>
-  </form>
   </div>
 </body>
 
