--- a/server/nido/templates/stripe/checkout.html
+++ b/server/nido/templates/stripe/checkout.html
@@ -1,89 +1,84 @@
+{% extends "vistas/base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="es">
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/apadrinamiento.css' %}">
+<link rel="stylesheet" href="{% static 'css/checkout.css' %}">
+<title>Nido / Donaciones</title>
+{% endblock %}
 
-<head>
-  <meta charset="utf-8" />
-  <title>Nido / Donaciones</title>
-  <meta name="description" content="A demo of a payment on Stripe" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <script src="https://js.stripe.com/v3/"></script>
-  <script src="{% static '/js/checkout.js' %}"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
+{% block content %}
 
-</head>
 
-<body>
-  <div class="container text-center">
-    <div class="row justify-content-md-center">
-      <h1>Donaciones</h1>
+<div class="container text-center">
+  <div class="row justify-content-md-center">
+    <h1>Donaciones</h1>
 
-      <div class="row mb-4">
+    <div class="row mb-4">
 
-        {% for option in options %}
-        <input type="hidden" id="myHiddenInput" value="{{option.amount}}">
-        <div class="col-12 col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">{{ option.name }}</h5>
-              <p class="card-text">{{ option.description }}</p>
-              <p class="card-text">Costo: ${{ option.amount }}</p>
-              <div class="details">
-                <p>Detalles del donativo {{ option.name }}:</p>
-                <ul>
-                  <li>{{option.info}}</li>
-                  <li>{{option.aves}}</li>
-                  <li>{{option.entradas}}</li>
-                </ul>
-              </div>
-              <!-- <button class="btn btn-primary show-more" data-option-id="{{ option.pk }}" >Hacer donativo</button> -->
-              <button id="show-form-button" onclick="showform('{{ option.pk }}');">Hacer donativo</button>
-              <!-- <button class="btn btn-primary show-more" onclick="showForm('{{ option.pk }}')">Hacer donativo</button> -->
+      {% for option in options %}
+      <input type="hidden" id="myHiddenInput" value="{{option.amount}}">
+      <div class="col-12 col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">{{ option.name }}</h5>
+            <p class="card-text">{{ option.description }}</p>
+            <p class="card-text">Costo: ${{ option.amount }}</p>
+            <div class="details">
+              <p>Detalles del donativo {{ option.name }}:</p>
+              <ul>
+                <li>{{option.info}}</li>
+                <li>{{option.aves}}</li>
+                <li>{{option.entradas}}</li>
+              </ul>
             </div>
+            <!-- <button class="btn btn-primary show-more" data-option-id="{{ option.pk }}" >Hacer donativo</button> -->
+            <button id="show-form-button" onclick="showform('{{ option.pk }}');">Hacer donativo</button>
+            <!-- <button class="btn btn-primary show-more" onclick="showForm('{{ option.pk }}')">Hacer donativo</button> -->
           </div>
         </div>
-        {% endfor %}
-
       </div>
+      {% endfor %}
+
+    </div>
 
 
-      <!--  -->
+    <!--  -->
 
-      <!-- Display a payment form -->
-      <div class="row mb-4">
-        <!-- <div class="col-lg-6 mx-auto"> -->
-        <div class="col-12 col-xl-6 mx-auto">
+    <!-- Display a payment form -->
+    <div class="row mb-4">
+      <!-- <div class="col-lg-6 mx-auto"> -->
+      <div class="col-12 col-xl-6 mx-auto">
 
-          <form id="form" style="display: none;">
-            <!-- <div>
+        <form id="form" style="display: none;">
+          <!-- <div>
               <p>*opcional</p>
               <input type="text" id="comentario">
             </div> -->
-            <!-- <form id="payment-form"  style="display: none;"> -->
-            <div id="link-authentication-element">
-              <!--Stripe.js injects the Link Authentication Element-->
-            </div>
-            <div id="payment-element">
+          <!-- <form id="payment-form"  style="display: none;"> -->
+          <div id="link-authentication-element">
+            <!--Stripe.js injects the Link Authentication Element-->
+          </div>
+          <div id="payment-element">
             <input type="hidden" id="payment_type" value="">
-              <!--Stripe.js injects the Payment Element-->
-            </div>
-            <button id="submit">
-              <div class="spinner hidden" id="spinner"></div>
-              <span id="button-text">Pagar ahora</span>
-            </button>
-            <div id="payment-message" class="hidden"></div>
-          </form>
-        </div>
+            <!--Stripe.js injects the Payment Element-->
+          </div>
+          <button id="submit">
+            <div class="spinner hidden" id="spinner"></div>
+            <span id="button-text">Pagar ahora</span>
+          </button>
+          <div id="payment-message" class="hidden"></div>
+        </form>
       </div>
     </div>
   </div>
-  </div>
-</body>
+</div>
+{% endblock %}
+{% block scripts %}
+<!-- include any script tags here -->
 
-</html>
+<script src="https://js.stripe.com/v3/"></script>
+<script src="{% static '/js/checkout.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+{% endblock %}
