--- a/server/nido/templates/vistas/apadrinamiento.html
+++ b/server/nido/templates/vistas/apadrinamiento.html
@@ -1,160 +1,118 @@
+{% extends "vistas/base.html" %}
 {% load static %}
-<!DOCTYPE html>
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/apadrinamiento.css' %}">
+{% endblock %}
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- <link rel="Stylesheet" href="Style.css" type="text/css" /> -->
-    <title></title>
-    <link rel="stylesheet" href="{% static 'css/apadrinamiento.css' %}">
-    <style type="text/css">
-        </style>
-</head>
-<body >
-    <form id="form2" runat="server">
-        <div class="auto-style13">
-        <div id="cabeza" class="cabeza">
-            <table class="style" >
-                <tr>
-                     <td class="auto-style16">
-                             <asp:Image ID="Image1" runat="server" ImageUrl="~/img/logoo.jpg"  style="margin-left: 0px" Width="158px" Height="150px" />
-                     </td>
-                    <td class="style2">
-                        &nbsp;</td>
-                                <td class="style3">
-                                    <ul id="button">
-                                        <li><a href="Index.aspx">&bull; Inicio </a></li>
-                                        <li><a href="Donativos.aspx">&bull; Donación </a></li>
-                                        <li><a href="Apadrinamiento.aspx">&bull; Apadrinamiento </a></li>
-                                        <li><a href="Sesion.aspx">• Sesión </a></li>
-                                    </ul>
-                                </td>
+{% block content %}
+    <table class="style1">
+        <tr>
+            <td class="auto-style1">
+                <div style="padding-top:70px;">
+                    <center>
+                        <img src="{% static 'img/ayuda.jpg' %}" width="1200px" alt="Ayuda">
+                    </center>
+                </div>
+            </td>
+        </tr>
+    </table>
 
-                </tr>
-            </table>
-            </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-          <table class="style1">
-                <tr >
-                    <td class="auto-style1">
-                         <div style="padding-top:70px;">
-                       <center><asp:Image ID="ImgAyuda" runat="server" ImageUrl="~/img/ayuda.jpg" Width="1200px" /></center>
-                             </div>
-                    </td>
-                </tr>
-            </table>
-         &nbsp;
-         &nbsp;
-         &nbsp;
-         &nbsp;
-         &nbsp;
-         &nbsp;
-        <div>
-            <p class="auto-style17" style="font-family: 'Comic Sans MS'">
-                                       Nuestro santuario de aves ha sido por mas de 50 años el hogar
-            de muchas especies únicas y hermosas, algunas de ellas en peligro de 
-            extinción, los recursos para cuidarlas se agotan, poniendo en riesgo
-            la subsistencia de estas increíbles especies.
+    <div>
+        <p class="auto-style17" style="font-family: 'Comic Sans MS'">
+            Nuestro santuario de aves ha sido por más de 50 años el hogar de muchas especies únicas y hermosas,
+            algunas de ellas en peligro de extinción. Los recursos para cuidarlas se agotan, poniendo en riesgo la
+            subsistencia de estas increíbles especies.
+        </p>
+        <p class="auto-style17" style="font-family: 'Comic Sans MS'">
+            Las autoridades metropolitanas clausuraron el santuario desde septiembre de 2022 debido a la falta de
+            documentos que no teníamos a la mano, mismos que ya fueron entregados en tiempo y forma a la autoridad y sin
+            embargo, no nos han permitido reabrir nuestras puertas.
+        </p>
+        <p class="auto-style17" style="font-family: 'Comic Sans MS'">
+            Para seguir protegiéndolas y brindarles el cuidado que necesitan, hacemos un llamado desesperado a la sociedad
+            civil y a todas las personas que conocen esta obra para pedir su apoyo, ya sea con una donación monetaria o con
+            frutas frescas en nuestros centros de acopio. Cada contribución cuenta.
+        </p>
+    </div>
 
-            </p>
-                        <p class="auto-style17" style="font-family: 'Comic Sans MS'">
-                                       Las autoridades metropolitanas clausuraron el santuario desde septiembre
-            de 2022 debido a la falta de documentos que no teniamos a la mano, 
-            mismos que ya fueron entregados en tiempo y forma a la autoridad y sin embargo,
-            no nos han permitido reabrir nuestras puertas.
-
-            </p>
-                        <p class="auto-style17" style="font-family: 'Comic Sans MS'">
-                                       Para seguir protegiendolas y brindarles el cuidado que necesitan, 
-            hacemos un llamado desesperado a la sociedad civil y a todas las ppersonas
-            que conocen esta obra para pedir su apoyo, ya sea con una donacion monetaria
-            o con frutas frescas en nuestros centros de acopio, cada contribución cuenta.
-            </p>
-        </div>
-
-        <div>
-            <table>
-                <tr>
-                    <td class="auto-style8" >
-
-                        <center><h1 style="font-family: 'Comic Sans MS'"><em>¿Qué significa Apadrinar a un animal?</em></h1>
+    <div>
+        <table>
+            <tr>
+                <td class="auto-style8">
+                    <center>
+                        <h1 style="font-family: 'Comic Sans MS'"><em>¿Qué significa Apadrinar a un animal?</em></h1>
                         <p class="auto-style7" style="font-family: 'Comic Sans MS'">
-                            Significa ayudar al mantenimiento de las especies que viven en El Nido y seguir ofreciendo un entorno seguro y saludable para estas aves 
-                            en peligro y trabajar juntos para asegurar un futuro mejor para ellas y lograr el sueño de que regresen a su verdadero hogar, los bosques y selvas del mundo. </p>
-                        </center>
-
-                    </td>
-                </tr>
-                </table>
-                &nbsp;
-            &nbsp;
-            &nbsp;
-            <table>
-               
-                <tr>
-                    <td class="auto-style14">
-
-                        <h2 class="auto-style12" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Plata</h2>
-                        <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Coste apadrinamoento:&nbsp; $350 al mes por un ave</p>
-                        <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Diploma acreditativo, a nomnre del padrin@</p>
-                        <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Ficha descriptiva y fotografia de la especie apadrinada</p>
-                        <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">
-                        <asp:Image ID="Image2" runat="server"  ImageUrl="~/img/Plata.png" Height="188px" Width="243px" />
+                            Significa ayudar al mantenimiento de las especies que viven en El Nido y seguir ofreciendo un
+                            entorno seguro y saludable para estas aves en peligro, y trabajar juntos para asegurar un futuro
+                            mejor para ellas y lograr el sueño de que regresen a su verdadero hogar, los bosques y selvas del
+                            mundo.
                         </p>
+                    </center>
+                </td>
+            </tr>
+        </table>
 
-                    </td>
-                    <td class="auto-style14">
-                        <h2 class="auto-style12" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">
-                            &nbsp;</h2>
-                        <h2 class="auto-style12" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Oro</h2>
-                        <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Coste apadrinamoento:&nbsp; $5,000 de cinco aves por tres meses<p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Diploma acreditativo, a nomnre del padrin@</p>
-                        <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Ficha descriptiva y fotografia de la especie apadrinada</p>
+        <br>
+        <br>
+        <br>
 
-                        <p class="auto-style13" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">1Vale para recoger un obse1Vale para recoger un obsequio de El Nido</p>
-                        <p class="auto-style13" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">4 Entradas gratuitas</p>
-                        <p class="auto-style13" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">
-                        <asp:Image ID="Image3" runat="server"  ImageUrl="~/img/Oro.png" Height="188px" Width="243px" />
-                        </p>
-                    </td>
-                    <td class="auto-style14">
-                        <h2 class="auto-style12" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Bronce</h2>
-                        <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Coste apadrinamoento:&nbsp; $1,000 de un ave por tres meses    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Diploma acreditativo, a nomnre del padrin@</p>
-                        <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Ficha descriptiva y fotogrFicha descriptiva y fotografia de la especie apadrinada</p>
+        <table>
+            <tr>
+                <td class="auto-style14">
+                    <h2 class="auto-style12" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Plata</h2>
+                    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Coste apadrinamiento: $350 al mes por un ave</p>
+                    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Diploma acreditativo, a nombre del padrino/a</p>
+                    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Ficha descriptiva y fotografía de la especie apadrinada</p>
+                    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">
+                        <img src="{% static 'img/Plata.png' %}" height="188px" width="243px" alt="Plata">
+                    </p>
+                </td>
+                <td class="auto-style14">
+                    <h2 class="auto-style12" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Oro</h2>
+                    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Coste apadrinamiento: $5,000 de cinco aves por tres meses</p>
+                    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Diploma acreditativo, a nombre del padrino/a</p>
+                    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Ficha descriptiva y fotografía de la especie apadrinada</p>
+                    <p class="auto-style13" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">1 Vale para recoger un obsequio de El Nido</p>
+                    <p class="auto-style13" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">4 Entradas gratuitas</p>
+                    <p class="auto-style13" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">
+                        <img src="{% static 'img/Oro.png' %}" height="188px" width="243px" alt="Oro">
+                    </p>
+                </td>
+                <td class="auto-style14">
+                    <h2 class="auto-style12" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Bronce</h2>
+                    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Coste apadrinamiento: $1,000 de un ave por tres meses</p>
+                    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Diploma acreditativo, a nombre del padrino/a</p>
+                    <p style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">Ficha descriptiva y fotografía de la especie apadrinada</p>
+                    <p class="auto-style13" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">2 Entradas gratuitas</p>
+                    <p class="auto-style13" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">
+                        <img src="{% static 'img/Bronce.png' %}" height="188px" width="243px" alt="Bronce">
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </div>
 
-                        <p class="auto-style13" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">2 Entradas gratuidas</p>
-                        <p class="auto-style13" style="font-family: 'Comic Sans MS'; font-style: inherit; font-weight: bolder">
-                        <asp:Image ID="Image4" runat="server"  ImageUrl="~/img/Bronce.png" Height="188px" Width="243px" />
-                        </p>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        &nbsp;
-         &nbsp;
-         &nbsp;
-         &nbsp;
-         &nbsp;
-         &nbsp;
-                    <asp:Image ID="Image5" runat="server"  ImageUrl="~/img/tarjeta.png" Height="215px" Width="336px" />
-        
-        <div style="font-weight: bold" class="auto-style18">
-            <p class="auto-style17" style="font-family: 'Comic Sans MS'">
-                Para recibir información del ave que estas protegiendo o canjear tu
-donativo por una experiencia en El Nido cuando la resolución de la
-autoridad haya sido favorable, por favor envia tu comprobante al</p>
-            <p class="auto-style17" style="font-family: 'Comic Sans MS'">
-                WhatsApp 55 6674 3314
-            </p>
-        </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-          </div>
+    <div style="text-align: center;">
+        <img src="{% static 'img/tarjeta.png' %}" height="215px" width="336px" alt="Tarjeta">
+    </div>
 
-          </form>
-
-     <footer class="footer">
-        <h4 class="auto-style10" style="font-family: 'Comic Sans MS'"> <em>Tratando de mejorar el mundo de ellos </em> </h4>
-        <h5> <span style="letter-spacing:0.3em">© 2023 Proudly created www.elnido.mx</span></h5>
-    </footer>
-</body>
-</html>
+    <div style="font-weight: bold" class="auto-style18">
+        <p class="auto-style17" style="font-family: 'Comic Sans MS'">Para recibir información del ave que estás protegiendo o canjear tu donativo por una experiencia en El Nido cuando la resolución de la autoridad haya sido favorable, por favor envía tu comprobante al</p>
+        <p class="auto-style17" style="font-family: 'Comic Sans MS'">WhatsApp 55 6674 3314</p>
+    </div>
+</div>
+{% endblock %}
