--- a/server/nido/templates/vistas/base.html
+++ b/server/nido/templates/vistas/base.html
@@ -30,22 +30,19 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: green;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Brand</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="main_nav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"> <a class="nav-link" href="#">Home </a> </li>
-                    <li class="nav-item"><a class="nav-link" href="#"> About </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"> Services </a></li>
+                    <li class="nav-item active"> <a class="nav-link" href="https://elnido.mx/">Inicio </a> </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown"> Hover me </a>
+                        <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Detalles</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#"> Submenu item 1</a></li>
-                            <li><a class="dropdown-item" href="#"> Submenu item 2 </a></li>
-                            <li><a class="dropdown-item" href="#"> Submenu item 3 </a></li>
+                            <li><a class="dropdown-item" href="{% url 'nido:aves' %}">Aves</a></li>
+                            <li><a class="dropdown-item" href="{% url 'nido:checkout' %}">Donativos</a></li>
+                            <li><a class="dropdown-item" href="{% url 'nido:apadrinamiento' %}">Apadrinamiento</a></li>
                         </ul>
                     </li>
                 </ul>
